# figrid-board

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  main.rs
docs/: INHERITED_TODO.md  figrid_nnue_v1.2_report.md  figrid_v1.2_claude_code_brief.md
src/: board.rs  eval.rs  features.rs  heuristic.rs  lib.rs  pattern_dense.rs  pattern_table.rs  search.rs  transposition.rs  vct.rs
src/legacy/: evaluator.rs  mod.rs  rec.rs  rec_base.rs  rec_checker.rs  rule.rs  tree.rs
