[package]
name = "figrid-board"
version = "0.6.8"
authors = [
    "nicotina04 <devherdson@gmail.com>",
    "wuwbobo2021 <wuwbobo@outlook.com>",
]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/nicotina04/figrid-board"
readme = "README.md"
description = """
A library for the Five-in-a-Row (Gomoku) game, powered by noru (Rust NNUE library).
"""

keywords = ["game", "board", "gomoku"]
categories = ["data-structures", "game-development"]

[dependencies]
noru = "2.1"

[lib]
name = "figrid_board"
path = "src/lib.rs"

[[bin]]
name = "pbrain-figrid-legacy"
path = "main.rs"

[[bin]]
name = "pbrain-figrid"
path = "bin/pbrain_figrid_noru.rs"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
strip = true
panic = "abort"
